# screeps-wasm-test

./: .gitignore  Cargo.toml  README.md
screepsplus_test/: main.js  pbf.js  protobuf.js  screeps_exports_b64.js
src/javascript/: callit.js  lib.js  pbf.js
src/javascript/protobuf/: pos.js
src/protobuf/: creep.proto  everything.proto  example.proto  execution.proto  mod.proto  pos.proto  room.proto  spawn.proto
src/rust/: decoding.rs  lib.rs  main.rs  protocol_types.rs  utils.rs
src/rust/external_allocations/: mod.rs
src/rust/functionality/: mod.rs
src/rust/protobuf/: creep.rs  everything.rs  execution.rs  mod.rs  pos.rs  room.rs  spawn.rs
wasm-protobuf-gen/: Cargo.toml  build.rs
wasm-protobuf-gen/src/: lib.rs
wasm-protobuf-gen/tests/: code_is_called.rs  integration.rs
wasm-protobuf-gen/wasm-protobuf-gen-build/: Cargo.toml
wasm-protobuf-gen/wasm-protobuf-gen-build/src/: arguments.rs  js_generation.rs  lib.rs  processing.rs  source_searching.rs
wasm-protobuf-gen/wasm-protobuf-gen-impl/: Cargo.toml
wasm-protobuf-gen/wasm-protobuf-gen-impl/src/: arguments.rs  lib.rs
