[package]
name = "wasm-protobuf-gen"
version = "0.0.1"
authors = ["David Ross <daboross@daboross.net>"]

[dependencies]
proc-macro-hack = "0.4"
wasm-protobuf-gen-impl = { version = "0.0.1", path = "wasm-protobuf-gen-impl" }

[build-dependencies]
wasm-protobuf-gen-build = { version = "0.0.1", path = "wasm-protobuf-gen-build" }
